--- a/index.html
+++ b/index.html
@@ -133,6 +133,41 @@
                 </div>
               </div>
         </section>
+
+
+        <section class="container my-5">
+            <h2>Shoes</h2>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-4 rounded-3 shadow">
+                        <img class="img-fluid" src="./images/shoes/shoe-1.png" alt="">
+                        <h3>Supply 350</h3>
+                        <p>This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        <h3>$120</h3>
+                        <a href="" class="btn btn-warning">Buy Now</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-4 rounded-3 shadow">
+                        <img class="img-fluid" src="./images/shoes/shoe-1.png" alt="">
+                        <h3>Nike 360</h3>
+                        <p>This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        <h3>$240</h3>
+                        <a href="" class="btn btn-warning">Buy Now</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-4 rounded-3 shadow">
+                        <img class="img-fluid" src="./images/shoes/shoe-1.png" alt="">
+                        <h3>Red Airmax</h3>
+                        <p>This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        <h3>$340</h3>
+                        <a href="" class="btn btn-warning">Buy Now</a>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
