--- a/index.html
+++ b/index.html
@@ -165,7 +165,38 @@
                         <a href="" class="btn btn-warning">Buy Now</a>
                     </div>
                 </div>
-                
+            </div>
+        </section>
+        <section class="container my-5">
+            <h2>Backpack</h2>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-4 rounded-3 shadow">
+                        <img class="img-fluid mb-3" src="./images/bags/bag-1.png" alt="">
+                        <h3>Red Bag</h3>
+                        <p>This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        <h3>$120</h3>
+                        <a href="" class="btn btn-warning">Buy Now</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-4 rounded-3 shadow">
+                        <img class="img-fluid mb-3" src="./images/bags/bag-2.png" alt="">
+                        <h3>Blue Bag</h3>
+                        <p>This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        <h3>$240</h3>
+                        <a href="" class="btn btn-warning">Buy Now</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="p-4 rounded-3 shadow">
+                        <img class="img-fluid mb-3" src="./images/bags/bag-3.png" alt="">
+                        <h3>Black Bag</h3>
+                        <p>This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        <h3>$340</h3>
+                        <a href="" class="btn btn-warning">Buy Now</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
